# amhello

./: configure.ac
lib/: Makefile.am  calc.c  greeting.c  greeting.h  libcalc.h
src/: Makefile.am  main.c
tests/: Makefile.am  test_calc.c
